<resources>

    //sex
    <string name="app_name">Wedding Suggestion</string>
    <string name="sex">Sex</string>
    <string name="sex_hint">Boy or Girl</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>

    //age
    <string name="male_age_range1">小於28歲</string>
    <string name="male_age_range2">28~33歲</string>
    <string name="male_age_range3">大於33歲</string>
    <string name="female_age_range1">小於25歲</string>
    <string name="female_age_range2">25~30歲</string>
    <string name="female_age_range3">大於30歲</string>


    <string name="age">Age</string>


    //suggest info
    <string name="age_hint">How old are u</string>
    <string name="suggestion">Suggest</string>
    <string name="suggestion_not_hurry">Not Hurry</string>
    <string name="suggestion_begin_find_couple">Begin Find Couple</string>
    <string name="suggestion_married">Get Married</string>


    <string name="OK">OK</string>
    <string name="spn_sex_select">請選擇性別</string>
    <string name="your_hobby">你的興趣 ：  </string>


    <string name="action_settings">Settings</string>

    //MoraGame
    <string name="prompt_com_play">電腦出拳：</string>
    <string name="prompt_my_play">玩家出拳：</string>
    <string name="play_scissors">剪刀</string>
    <string name="play_stone">石頭</string>
    <string name="play_paper">布</string>
    <string name="player_win">恭喜，你贏了！</string>
    <string name="player_lose">很可惜，你輸了！</string>
    <string name="player_draw">雙方平手！</string>
    <string name="prompt_title">和電腦猜拳</string>
    <string name="result">判斷輸贏：</string>
    <string name="btn_ripple">水波按鈕動畫</string>


    //MaterialDesign
    <string name="btn_normal">一般按鈕</string>
    <string name="btn_roll_dice">擲骰子</string>


    //rollDice
    <string name="roll_result">點數：</string>
    <string name="example">示範：</string>

    //ObjectAnimation
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="total_set">全部局數：</string>


    //Fragment
    <string name="player_win_set">玩家贏：</string>
    <string name="computer_win_set">電腦贏：</string>
    <string name="draw">平手：</string>
    <string name="show_result1">看結果1</string>
    <string name="show_result2">看結果2</string>
    <string name="hide_result">隱藏結果</string>


    <string name="input_text">請輸入文字</string>

    //ListActivity
    <string name="btn_add_auto_complete_text">加入自動完成文字</string>

    //AutoComplete
    <string name="btn_clear_auto_complete_text">清除自動完成文字</string>
    <string name="seek_bar_progress">SeekBar 的Progress值：</string>
    <string name="rating_bar_value">RatingBar 的Value值：</string>


    //SeekBar and RatingBar
    <string name="rating_bar_progress">SeekBar 的Progress值：</string>


    //DateAndTimePicker
    <string name="time_picker_dialog">TimePickerDialog</string>
    <string name="date_picker_dialog">DatePickerDialog</string>

    <string-array name="sex_list">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="weekday">
        <item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>

    </string-array>

    //ThreadAndProgressBar
    <string name="progress_bar_default">這是預設的Progress型態</string>
    <string name="progress_bar_horizontal">這是progressBarStyleHorizontal型態</string>
    <string name="progress_bar_large">這是progressBarStyleLarge型態</string>
    <string name="progress_bar_small">這是progressBarStyleSmall型態</string>



</resources>