<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RadioGroupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/radGroupSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radBtnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sex_male" />

        <RadioButton
            android:id="@+id/radBtnFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_female" />
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/radGroupAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radBtnRange1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_age_range1"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radBtnRange2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_age_range2" />
        <RadioButton
            android:id="@+id/radBtnRange3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_age_range3" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestion"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/OK" />
</LinearLayout>