<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageButtonImageViewActivity">


    <Button
        android:id="@+id/btn_show_result1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mora_tv_Result"
        android:layout_alignLeft="@+id/mora_tv_txtCom"
        android:layout_marginTop="10dp"
        android:text="@string/show_result1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_show_result2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mora_tv_Result"
        android:layout_alignLeft="@+id/mora_imgbtn_Paper"
        android:layout_marginTop="10dp"
        android:text="@string/show_result2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_hide_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_show_result1"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/hide_result"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/mora_imgbtn_Scissors"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/mora_tv_MyPlay"
        android:layout_alignLeft="@id/mora_tv_MyPlay"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/scissors" />

    <ImageButton
        android:id="@+id/mora_imgbtn_Paper"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/mora_imgbtn_Scissors"
        android:layout_alignLeft="@id/mora_tv_MyPlay"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:scaleType="fitCenter"
        android:src="@drawable/paper"
        android:text="@string/play_paper" />

    <ImageButton
        android:id="@+id/mora_imgbtn_Stone"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/mora_imgbtn_Paper"
        android:layout_alignLeft="@id/mora_tv_MyPlay"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/stone"
        android:text="@string/play_stone"
        android:textSize="20sp" />


    <ImageView
        android:id="@+id/mora_img_ComPlay"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/mora_imgbtn_Scissors"
        android:layout_alignLeft="@+id/mora_tv_txtCom"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/mora_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:text="@string/prompt_title"
        android:textColor="#FF00FF"
        android:textSize="40sp"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/mora_tv_txtCom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mora_tv_title"
        android:layout_alignLeft="@+id/mora_tv_title"
        android:paddingBottom="20dp"
        android:text="@string/prompt_com_play"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/mora_tv_MyPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mora_tv_title"
        android:layout_alignRight="@+id/mora_tv_title"
        android:paddingBottom="20dp"
        android:text="@string/prompt_my_play"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/mora_tv_Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mora_imgbtn_Stone"
        android:layout_alignLeft="@+id/mora_tv_txtCom"
        android:paddingBottom="20dp"
        android:text="@string/result"
        android:textSize="20sp" />

</RelativeLayout>