<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".FragmentManager.FMGameResult2Fragment">

    <TableRow>
        <TextView
            android:text="@string/total_set"
            android:textColor="#0FFFFF"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/game2_edt_count_set"
            android:layout_weight="1"
            android:focusable="false" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/player_win_set"
            android:textColor="#0FFFFF"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/game2_edt_count_player_win_set"
            android:layout_weight="1"
            android:focusable="false" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/computer_win_set"
            android:textColor="#0FFFFF"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/game2_edt_count_com_win_set"
            android:layout_weight="1"
            android:focusable="false" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/draw"
            android:textColor="#0FFFFF"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/game2_edt_count_draw_set"
            android:layout_weight="1"
            android:focusable="false" />
    </TableRow>

</TableLayout>