<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AutoCompleteTextView.AutoCompleteTextViewActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_text" />

    <AutoCompleteTextView
        android:id="@+id/auto_complete_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_auto_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_auto_complete_text"/>

    <Button
        android:id="@+id/btn_auto_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear_auto_complete_text"/>

</LinearLayout>