<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SeekBarAndRatingBar.SeekBarAndRatingBarActivity">

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:max="100" />
    <TextView
        android:id="@+id/txtSeekBarProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seek_bar_progress"
        android:textSize="20sp" />
    <RatingBar
        android:id="@+id/rating_bar"
        style="?android:attr/ratingBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/txtRatingBarValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating_bar_value"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/txtRatingBarProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating_bar_progress"
        android:textSize="20sp" />




</LinearLayout>